[workspace.package]
edition      = "2021"
authors      = ["saying121 <saying121@outlook.com>"]
homepage     = "https://github.com/saying121/leetcode-cn-en-cli"
rust-version = "1.77"
repository   = "https://github.com/saying121/leetcode-cn-en-cli"

[workspace]
members  = ["crates/*"]
resolver = "2"
exclude  = [".github", "sample/"]

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
panic         = "unwind"

[workspace.dependencies]
# async
tokio   = { version = "^1", features = ["full"] }
futures = { version = "^0.3", default_features = false, features = ["std"] }

sea-orm = { version = "^0.12", default_features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

reqwest = { version = "^0.11", default_features = true, features = ["gzip", "json"] }

regex = { version = "^1" }

dirs      = { version = "^5" }
crossterm = { version = "^0.27", default_features = true, features = ["event-stream"] }

tracing            = { version = "^0.1" }
tracing-appender   = { version = "^0.2" }
tracing-subscriber = { version = "^0.3", default_features = true, features = ["env-filter"] }

miette = { version = "^5", default_features = true, features = ["fancy"] }

# Serialize
serde      = { version = "^1", default_features = true, features = ["derive"] }
serde_json = { version = "^1", default_features = true }
toml       = { version = "^0.8", default_features = true }

html2text = { version = "^0.10" }

pretty_assertions = { version = "^1" }
paste             = { version = "^1" }

key_parse       = { path = "./crates/key_parse", version = "^0.1" }
decrypt-cookies = { path = "./crates/decrypt-cookies", version = "^0.1" }
lcode-config    = { path = "./crates/lcode-config", version = "^0.1" }

[workspace.lints.rust]
# unsafe = "forbid"

[workspace.lints.clippy]
# string_slice                              = "warn"
# panic                                     = "warn"
unseparated_literal_suffix                = "warn"
str_to_string                             = "warn"
string_add_assign                         = "warn"
string_lit_as_bytes                       = "warn"
string_to_string                          = "warn"
inefficient_to_string                     = "warn"
manual_string_new                         = "warn"
needless_raw_strings                      = "warn"
filter_map_next                           = "warn"
flat_map_option                           = "warn"
map_err_ignore                            = "warn"
map_unwrap_or                             = "warn"
zero_sized_map_values                     = "warn"
maybe_infinite_iter                       = "warn"
from_iter_instead_of_collect              = "warn"
iter_not_returning_iterator               = "warn"
iter_on_empty_collections                 = "warn"
iter_on_single_items                      = "warn"
iter_with_drain                           = "warn"
let_underscore_untyped                    = "warn"
useless_let_if_seq                        = "warn"
equatable_if_let                          = "warn"
bool_to_int_with_if                       = "warn"
if_not_else                               = "warn"
if_then_some_else_none                    = "warn"
manual_assert                             = "warn"
manual_clamp                              = "warn"
manual_instant_elapsed                    = "warn"
manual_let_else                           = "warn"
manual_ok_or                              = "warn"
decimal_literal_representation            = "warn"
unreadable_literal                        = "warn"
redundant_clone                           = "warn"
redundant_else                            = "warn"
redundant_feature_names                   = "warn"
redundant_pub_crate                       = "warn"
unwrap_in_result                          = "warn"
unnecessary_safety_doc                    = "warn"
doc_link_with_quotes                      = "warn"
doc_markdown                              = "warn"
empty_line_after_doc_comments             = "warn"
alloc_instead_of_core                     = "warn"
allow_attributes                          = "warn"
allow_attributes_without_reason           = "warn"
checked_conversions                       = "warn"
as_underscore                             = "warn"
branches_sharing_code                     = "warn"
case_sensitive_file_extension_comparisons = "warn"
clear_with_drain                          = "warn"
collection_is_never_read                  = "warn"
copy_iterator                             = "warn"
create_dir                                = "warn"
debug_assert_with_mut_call                = "warn"
default_union_representation              = "warn"
deref_by_slicing                          = "warn"
derive_partial_eq_without_eq              = "warn"
disallowed_script_idents                  = "warn"
float_cmp                                 = "warn"
float_cmp_const                           = "warn"
lossy_float_literal                       = "warn"
explicit_deref_methods                    = "warn"
explicit_into_iter_loop                   = "warn"
explicit_iter_loop                        = "warn"
rc_buffer                                 = "warn"
rc_mutex                                  = "warn"
mutex_atomic                              = "warn"
mutex_integer                             = "warn"
invalid_upcast_comparisons                = "warn"
linkedlist                                = "warn"
match_bool                                = "warn"
match_on_vec_items                        = "warn"
match_wild_err_arm                        = "warn"
needless_bitwise_bool                     = "warn"
needless_collect                          = "warn"
needless_continue                         = "warn"
needless_for_each                         = "warn"
needless_pass_by_value                    = "warn"
range_minus_one                           = "warn"
range_plus_one                            = "warn"
semicolon_if_nothing_returned             = "warn"
semicolon_inside_block                    = "warn"
semicolon_outside_block                   = "warn"
stable_sort_primitive                     = "warn"
unnecessary_box_returns                   = "warn"
unnecessary_join                          = "warn"
unnecessary_safety_comment                = "warn"
unnecessary_self_imports                  = "warn"
unnecessary_struct_initialization         = "warn"
unnecessary_wraps                         = "warn"
cloned_instead_of_copied                  = "warn"
unused_async                              = "warn"
unused_peekable                           = "warn"
unused_rounding                           = "warn"
unused_self                               = "warn"
use_self                                  = "warn"
verbose_file_reads                        = "warn"
verbose_bit_mask                          = "warn"
unneeded_field_pattern                    = "warn"
unnested_or_patterns                      = "warn"
type_repetition_in_bounds                 = "warn"
unchecked_duration_subtraction            = "warn"
unicode_not_nfc                           = "warn"
missing_const_for_fn                      = "warn"
mut_mut                                   = "warn"
filetype_is_file                          = "warn"
readonly_write_lock                       = "warn"
try_err                                   = "warn"
same_functions_in_if_condition            = "warn"
same_name_method                          = "warn"
large_digit_groups                        = "warn"
large_futures                             = "warn"
large_include_file                        = "warn"
large_stack_arrays                        = "warn"
large_stack_frames                        = "warn"
large_types_passed_by_value               = "warn"
index_refutable_slice                     = "warn"
mem_forget                                = "warn"
empty_drop                                = "warn"
empty_line_after_outer_attr               = "warn"
empty_structs_with_brackets               = "warn"
empty_enum                                = "warn"
enum_glob_use                             = "warn"
error_impl_error                          = "warn"
exit                                      = "warn"
ignored_unit_patterns                     = "warn"
trait_duplication_in_bounds               = "warn"
default_trait_access                      = "warn"
impl_trait_in_params                      = "warn"
trivial_regex                             = "warn"
trivially_copy_pass_by_ref                = "warn"
cast_ptr_alignment                        = "warn"
borrow_as_ptr                             = "warn"
as_ptr_cast_mut                           = "warn"
clone_on_ref_ptr                          = "warn"
ptr_as_ptr                                = "warn"
ptr_cast_constness                        = "warn"
transmute_ptr_to_ptr                      = "warn"
panic_in_result_fn                        = "warn"
suboptimal_flops                          = "warn"
should_panic_without_expect               = "warn"
significant_drop_tightening               = "warn"
pub_without_shorthand                     = "warn"
ref_binding_to_reference                  = "warn"
ref_option_ref                            = "warn"
ref_patterns                              = "warn"
rest_pat_in_fully_bound_structs           = "warn"
implicit_hasher                           = "warn"
implicit_clone                            = "warn"
macro_use_imports                         = "warn"
many_single_char_names                    = "warn"
mismatching_type_param_order              = "warn"
transmute_undefined_repr                  = "warn"
expl_impl_clone_on_copy                   = "warn"
fallible_impl_from                        = "warn"
fn_params_excessive_bools                 = "warn"
fn_to_numeric_cast_any                    = "warn"
implied_bounds_in_impls                   = "warn"
imprecise_flops                           = "warn"
inconsistent_struct_constructor           = "warn"
mixed_read_write_in_expression            = "warn"
path_buf_push_overwrite                   = "warn"
option_option                             = "warn"
or_fun_call                               = "warn"
no_mangle_with_rust_abi                   = "warn"
naive_bytecount                           = "warn"
negative_feature_names                    = "warn"
no_effect_underscore_binding              = "warn"
nonstandard_macro_braces                  = "warn"
