[package]
name        = "key_parse"
version     = "0.1.0"
edition     = "2021"
authors     = ["saying121 <saying121@outlook.com>"]
description = "parse keymap like neovim"
license     = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde     = { version = "^1", features = ["derive"] }
toml      = { version = "^0.8" }
crossterm = { version = "^0.27" }
tracing   = { version = "^0.1" }
miette    = { version = "^5.10" }

[dev-dependencies]
pretty_assertions = { version = "^1" }

[lints]
workspace = true
