[package]
name         = "decrypt-cookies"
version      = "0.1.2"
description  = "A decrypt browser cookies crate"
license      = "LGPL-3.0-or-later OR Apache-2.0"
edition      = { workspace = true }
authors      = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { workspace = true }

openssl        = { version = "^0.10" }
secret-service = { version = "^3", features = ["rt-tokio-crypto-rust"] }

tracing = { workspace = true }

serde = { workspace = true }
toml  = { workspace = true }
ini   = { version = "^1" }

dirs = { workspace = true }

sea-orm = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
serde_json = { workspace = true }
