[package]
name        = "decrypt-cookies"
version     = "0.1.7"
description = "A decrypt browser cookies crate"
license     = "LGPL-3.0-or-later OR Apache-2.0"
edition     = { workspace = true }
authors     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }

exclude = ["tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio  = { version = "^1" }
miette = { workspace = true }

aes    = { version = "0.8.3" }
cbc    = { version = "0.1.2" }
pbkdf2 = { version = "0.12.2", features = ["sha1"] }
sha1   = { version = "0.10.6" }

secret-service = { version = "^3", features = ["rt-tokio-crypto-rust"] }

tracing = { workspace = true }

serde = { workspace = true }
toml  = { workspace = true }
ini   = { version = "^1" }

dirs = { workspace = true }

sea-orm = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio              = { version = "^1", features = ["macros", "rt-multi-thread"] }
