[package]
name         = "key_parse"
version      = "0.1.7"
description  = "parse keymap like neovim"
license      = "Apache-2.0"
edition      = { workspace = true }
authors      = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
rust-version = "1.77"

exclude = ["tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
crossterm = { version = "^0.27", default-features = false, features = ["events"] }
miette    = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
