[package]
name         = "lcode-config"
version      = "0.3.1"
license      = "MIT OR Apache-2.0"
description  = "config mod for lcode"
edition      = { workspace = true }
authors      = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decrypt-cookies = { workspace = true }
miette          = { workspace = true }
reqwest         = { workspace = true }
serde           = { workspace = true }
toml            = { workspace = true }
dirs            = { workspace = true }
paste           = { workspace = true }
tracing         = { workspace = true }
crossterm       = { workspace = true }
key_parse       = { workspace = true }

[lints]
workspace = true
