[package]
name          = "lcode"
version       = "0.7.14"
description   = "An application of terminal write leetcode.一个终端刷力扣的应用"
documentation = "https://docs.rs/lcode"
license       = "Apache-2.0"
readme        = "../../README.md"
keywords      = ["cli", "leetcode", "tui", "terminal", "algorithms"]
categories    = ["algorithms", "command-line-utilities", "asynchronous"]
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }

exclude = ["tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio   = { workspace = true }
futures = { workspace = true }

miette = { workspace = true, features = ["fancy"] }

colored = { workspace = true }

# log
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }

# nucleo = { version = "0.4.0" }
nucleo-matcher = { version = "0.3.1" }
simsearch      = { version = "^0.2" }
inquire        = { version = "^0.7", default_features = false, features = ["macros", "crossterm", "fuzzy"] }
atoi           = { version = "^2" }
unicode-width  = { version = "^0.1" }

clap = { version = "^4", default_features = false, features = [
    "derive",
    "std",
    "help",
    "error-context",
    "suggestions",
    "usage",
    "color",
] }

# tui
ratatui      = { workspace = true }
crossterm    = { workspace = true }
tui-textarea = { version = "^0.4" }

# Shit, decode leetcode avator error: `InvalidSignature`
# ratatui-image = { version = "0.8.0", default_features = true }
# image         = { version = "^0.24", default_features = true, features = ["png", "gif", "jpeg"] }

# tui-term = { version = "0.1.2" }
# tui-logger = { version = "0.9.5" }

open = { version = "^5" }

rayon = { version = "^1" }

notify-rust = { version = "^4.10", default_features = false, features = ["d"] }

lcode-config = { workspace = true }
leetcode-api = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
